<resources>
    <string name="app_name">iTailor</string>

    //Main
    <string name="armoire">Armoire</string>
    <string name="recommend">Recommend</string>
    <string name="community">Community</string>
    <string name="personal">Personal</string>

    //Activity
    <string name="my_armoire">My Armoire</string>
    <string name="add_cloth">Add Cloth</string>
    <string name="show_body">3D Model</string>
    <string name="personal_recommend">Personal Recommend</string>
    <string name="friends_share">Friends Share</string>
    <string name="personal_center">Personal Center</string>
    <string name="community_posts">Community Posts</string>
    <string name="login">Login</string>
    <string name="my_friends">My Friends</string>
    <string name="add_friend">Add Friend</string>
    <string name="pursuers">Pursuers</string>
    <string name="body_data">Body Data</string>
    <string name="user_info">User Info</string>
    <string name="user_preferences">User Preferences</string>
    <string name="my_favourites">My Favourites</string>
    <string name="share_info">My Share</string>
    <string name="share">Share</string>
    <string name="images_activity">images</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="about_us">About Us</string>
    <string name="details">Details</string>
    <string name="notification">Notification</string>

    //Action
    <string name="action_settings">Settings</string>
    <string name="action_camera">Camera</string>
    <string name="action_grid">Grid</string>
    <string name="action_small_grid">Small Grid</string>
    <string name="action_list">List</string>
    <string name="action_send">Send</string>
    <string name="action_add_friend">Add Friend</string>
    <string name="action_favour">Favour</string>
    <string name="action_share">Share</string>
    <string name="action_search">Search</string>
    <string name="action_edit">Edit</string>
    <string name="action_new_group">NEW GROUP</string>
    <string name="delete">DELETE</string>
    <string name="move_to">Move</string>
    <string name="reject_share">REJECT HIS SHARE</string>
    <string name="not_share_him">NOT SHARE HIM</string>

    //Marked words
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="label_name">Name: </string>
    <string name="new_name">New Name</string>
    <string name="label_group_name">Group name: </string>
    <string name="description">Description</string>
    <string name="auto_sync">Auto Sync</string>
    <string name="display_notification">Display Notification</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="check_update">Check for Update</string>
    <string name="version_information">Version Information</string>
    <string name="sure_delete">Sure you want to delete?</string>
    <string name="what_share">What you want to share&#8230;</string>
    <string name="et_fb_hint">Your feedback</string>
    <string name="search_hint">Search&#8230;</string>

    //Message
    <string name="empty_armoire">Your armoire is empty.</string>
    <string name="loading">Loading like all possessed</string>
    <string name="no_more">No more. See you later!</string>
    <string name="need_login">Need login first!</string>
    <string name="overdue_login">Login is overdue, please login again!</string>
    <string name="fail_add">Fail to add</string>
    <string name="fail_delete">Fail to delete</string>
    <string name="fail_by_network">Fail to connect network</string>
    <string name="fail_register">Fail register, please try again!</string>
    <string name="exist_email_error">Email already exist!</string>
    <string name="successful_register">Successful Register, please login!</string>
    <string name="fail_login">Fail login, please try again!</string>
    <string name="successful_login">Successful Login</string>
    <string name="error_same_name">Update error\nThe name already exists</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="successful_logout">Successful Logout</string>
    <string name="fail_logout">Fail logout!</string>
    <string name="already_logout">Already Logout</string>
    <string name="successful_save">Successful save</string>
    <string name="fail_login_with_bad_network">Bad network, please try again！</string>

    //Body Data
    <string name="secret">Secret</string>
    <string name="gender">Gender</string>
    <string name="age">Age   </string>
    <string name="character">Character </string>
    <string name="face_shape">Face Shape </string>
    <string name="skin_color">Skin Color</string>
    <string name="weight">Weight</string>
    <string name="body_length">Body Length  </string>
    <string name="waist_height">Waist Height </string>
    <string name="crotch_height">Crotch Height</string>
    <string name="chest">Chest        </string>
    <string name="waist_line">Waist Line   </string>
    <string name="hip_line">Hip Line     </string>
    <string name="leg_length">Leg Length   </string>
    <string name="shoulder">Shoulder     </string>
    <string name="arm_length">Arm Length   </string>

    //Button Text
    <string name="cancel">CANCEL</string>
    <string name="submit">SUBMIT</string>
    <string name="affirm">AFFIRM</string>
    <string name="accept">ACCEPT</string>
    <string name="reject">REJECT</string>
    <string name="done">DONE</string>
    <string name="reset">RESET</string>
    <string name="previous">previous</string>
    <string name="next">next</string>
    <string name="go_add">Go adding</string>
    <string name="register">REGISTER</string>
    <string name="sign_in">Sign in</string>
    <string name="qq_login">QQ LOGIN</string>
    <string name="log_out">LOG OUT</string>

    //Mine
    <string name="user_control">User Control</string>
    <string name="before_login">Not already logged in</string>
    <string name="test_preferences">Test Your Preferences</string>
    <string name="secure_control">Secure Control</string>
    <string name="realsense">RealSense</string>
    <string name="closed">Closed</string>
    <string name="exit">Exit</string>

    //No Chinese
    <string name="group_icon">Group Icon</string>
    <string name="tag_group_index">Group Index</string>
    <string name="tag_child_index">Child Index</string>
    <string name="itailor_seal">iTailor Seal</string>
    <string name="images">Images</string>
    <string name="cloth">Cloth</string>
    <string name="group_position">group_position</string>
    <string name="child_position">child_position</string>

    <string-array name="group_edit">
        <item>Rename</item>
        <item>New</item>
        <item>Delete</item>
        <item>Share</item>
    </string-array>

    <string-array name="child_edit">
        <item>Rename</item>
        <item>Move</item>
        <item>Delete</item>
        <item>Share</item>
    </string-array>

    <string-array name="friend_edit">
        <item>Move</item>
        <item>Not Share Him</item>
        <item>Reject His Share</item>
        <item>Delete</item>
    </string-array>
    
    <string-array name="age_classify">
        <item>less than 18</item>
        <item>more than 45</item>
    </string-array>

    <string-array name="character">
        <item>Outgoing</item>
    </string-array>
    
    <string-array name="face_shape">
        <item>Round</item>
        <item>Ellipse</item>
        <item>四方脸</item>
        <item>长方脸</item>
        <item>菱形脸</item>
        <item>倒三角</item>
        <item>其他</item>
    </string-array>

    <string-array name="skin_color">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="title_activity_details">DetailsActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_messages">MessagesActivity</string>
    <string name="title_activity_color_image">ColorImageActivity</string>
</resources>
