<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context="com.thea.itailor.community.app.AddFriendActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/action_add_friend"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_affirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/affirm"
            android:paddingRight="16dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/sv_new_friend"
            android:layout_alignBottom="@+id/sv_new_friend"
            android:gravity="center_vertical"
            style="@style/TextAppearance.AppCompat.Button"/>

        <android.support.v7.widget.SearchView
            android:id="@+id/sv_new_friend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_toLeftOf="@+id/tv_affirm"
            android:layout_toStartOf="@+id/tv_affirm"
            app:defaultQueryHint="@string/email"
            app:paddingStart="16dp"
            app:iconifiedByDefault="false"/>

    </RelativeLayout>
</LinearLayout>
