<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@color/red_700"
    tools:context="com.thea.itailor.ScanActivity">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/tv_save_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textSize="12sp"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_below="@+id/tv_save_time"
                    android:id="@+id/ll_new_cloth_name">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/label_name"
                        android:textSize="18sp"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:id="@+id/et_cloth_name"
                        android:hint="@string/new_name"
                        android:autoText="true"
                        android:editable="true"
                        android:inputType="text"
                        android:layout_marginLeft="16dp" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:id="@+id/ll_new_cloth_group"
                    android:layout_below="@+id/ll_new_cloth_name">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/label_group_name"
                        android:textSize="18sp"/>

                    <Spinner
                        android:id="@+id/spn_lattices"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="16dp"/>

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_below="@+id/ll_new_cloth_group"
                    android:id="@+id/ll_cloth_story">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="Ta的故事"
                        android:textSize="18sp"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:id="@+id/et_cloth_story"
                        android:autoText="true"
                        android:editable="true"
                        android:inputType="text"
                        android:singleLine="true"
                        android:layout_marginLeft="16dp" />

                </LinearLayout>
                <ImageView
                    android:id="@+id/iv_camera_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@mipmap/head_icon"
                    android:contentDescription="@string/cloth"
                    android:layout_below="@+id/ll_cloth_story"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</LinearLayout>
